--- a/modlist.html
+++ b/modlist.html
@@ -111,6 +111,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/topography">Topography (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-legacy-forge">FTB Library (Forge) (Legacy) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openmodslib">OpenModsLib (by OpenMods)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
