--- a/modlist.html
+++ b/modlist.html
@@ -31,6 +31,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jetif">Just Enough Throwing In Fluids (JETIF) (by Lykrast)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-tech">Immersive Tech (by Forge_User_11180423)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-1-10">Avaritia 1.1x (by brandon3055)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/fps-reducer">FPS Reducer (by bre2el)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-world">CoFH World (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/p455w0rds-library">p455w0rd's Library (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekatweaker">MekaTweaker (by Lorexe)</a></li>
