--- a/modlist.html
+++ b/modlist.html
@@ -1,10 +1,10 @@
 ﻿<ul>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/smooth-font">Smooth Font (by bre2el)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applecore">AppleCore (by squeek502)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-energistics-jee">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-resources-jer">Just Enough Resources (JER) (by way2muchnoise)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-energistics-jee">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-builders-wands">Better Builder's Wands (by Portablejim)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tree-growing-simulator">Tree Growing Simulator (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-ex">Project EX (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inworldcrafting">InWorldCrafting (by IterationFunk)</a></li>
@@ -20,12 +20,13 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by FeldiM245)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aromabackup">AromaBackup (by Aroma1997)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu">FancyMenu [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-flux">Redstone Flux (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-machinery">Modular Machinery (by HellFirePvP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bnbgaminglib">BNBGamingLib (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-skyblock">Tinkers' Skyblock (by bonusboni)</a></li>
@@ -63,8 +64,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/immersive-engineering">Immersive Engineering (by BluSunrize)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ctm">ConnectedTexturesMod (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker">CraftTweaker (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks">Crafting Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/base">B.A.S.E (by lanse505)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks">Crafting Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/common-capabilities">Common Capabilities (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-mortars">Advanced Mortars (by codetaylor)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/projecte">ProjectE (by SinKillerJ)</a></li>
@@ -72,8 +73,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/autoreglib">AutoRegLib (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft">Thaumcraft (by Azanor13)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/endertweaker">Ender Tweaker (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-aura">Nature's Aura (by Ellpeck)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-recipe-book">No Recipe Book (by Seneschal_Luwin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker-integration">CraftTweaker Integration (by TCreopargh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mantle">Mantle (by mDiyo)</a></li>
@@ -94,6 +95,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-quests-forge">FTB Quests (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mtlib">MTLib (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/contenttweaker">ContentTweaker (by Jaredlll08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/konkrete">Konkrete [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-craft">Industrial Craft (by sfPlayer1)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mod-name-tooltip">Mod Name Tooltip (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/vanillafix">VanillaFix (by Runemoro)</a></li>
