--- a/modlist.html
+++ b/modlist.html
@@ -5,6 +5,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-energistics-jee">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-builders-wands">Better Builder's Wands (by Portablejim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting-omnifactory-edition">Extended Crafting: Omnifactory Edition (by Exa4096)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tree-growing-simulator">Tree Growing Simulator (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-ex">Project EX (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inworldcrafting">InWorldCrafting (by IterationFunk)</a></li>
@@ -20,8 +21,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by FeldiM245)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aromabackup">AromaBackup (by Aroma1997)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu">FancyMenu [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu">FancyMenu [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-flux">Redstone Flux (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-machinery">Modular Machinery (by HellFirePvP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
@@ -131,7 +132,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania-tweaks">Botania Tweaks (by quat1024)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/guide-api">Guide-API (by TehNut)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sonar-core">Sonar Core (by sonar_sonic)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting">Extended Crafting (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-jei">Tinker's JEI (by possible_triangle)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toast-control">Toast Control (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ic2-tweaker">IC2 Tweaker (by tttusk)</a></li>
