--- a/modlist.html
+++ b/modlist.html
@@ -10,16 +10,17 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/project-ex">Project EX (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inworldcrafting">InWorldCrafting (by IterationFunk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-cultivation">Thermal Cultivation (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-harvestcraft">Just Enough HarvestCraft (JEHC) (by mrapplexz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agradditions">Mystical Agradditions (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-jetpacks-2">Simply Jetpacks 2 (by Tomson124)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shadowfacts-forgelin">Shadowfacts' Forgelin (by ShadowfactsDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/actually-additions">Actually Additions (by Ellpeck)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-crafting-terminal">Wireless Crafting Terminal (by TheRealp455w0rd)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/exchangers">Exchangers (by Jackyy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tesla-core-lib">Tesla Core Lib (by face_of_cat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania">Botania (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/randomtweaker">RandomTweaker (by ikexing)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by FeldiM245)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/aromabackup">AromaBackup (by Aroma1997)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu">FancyMenu [Forge] (by Keksuccino)</a></li>
@@ -49,11 +50,16 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/endercore">EnderCore (by tterrag1098)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/wanionlib">WanionLib (by WanionCane)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/gunpowderlib">GunpowderLib (by Jackyy)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2-stuff">AE2 Stuff (by bdew)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools">RFTools (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pams-harvestcraft">Pam's HarvestCraft (by pamharvestcraft)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/matteroverdrive-legacy">Matter Overdrive: Legacy Edition (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-dynamics">Thermal Dynamics (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/building-gadgets">Building Gadgets (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/surge">Surge (by DarkhaxDev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-backups-forge">FTB Backups (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker-utils">CraftTweaker Utils (by BrisingrAerowing)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphor-forge">Phosphor (Forge) (by jellysquid3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/draconic-evolution">Draconic Evolution (by brandon3055)</a></li>
@@ -68,6 +74,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/base">B.A.S.E (by lanse505)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks">Crafting Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/common-capabilities">Common Capabilities (by kroeser)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-drags">Just Enough Drags (by warmthdawn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-mortars">Advanced Mortars (by codetaylor)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/projecte">ProjectE (by SinKillerJ)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
@@ -77,39 +84,45 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-aura">Nature's Aura (by Ellpeck)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/torchmaster">Torchmaster (by xalcon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-recipe-book">No Recipe Book (by Seneschal_Luwin)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mcjtylib">McJtyLib (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker-integration">CraftTweaker Integration (by TCreopargh)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mantle">Mantle (by mDiyo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-nether-portals">No Nether Portals (by Seneschal_Luwin)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/unidict">UniDict (by WanionCane)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-window-title">Custom Window Title (by chylex)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bnbgamingcore">BnBGamingCore (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botanic-bonsai">Botanic Bonsai (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/compact-machines">Compact Machines (by davenonymous)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/resource-loader">Resource Loader (by Lumien231)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-tool-leveling">Tinkers' Tool Leveling (by bonusboni)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/resource-loader">Resource Loader (by Lumien231)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forgiving-void">Forgiving Void (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-tool-leveling">Tinkers' Tool Leveling (by bonusboni)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumic-jei">Thaumic JEI (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bdlib">BdLib (by bdew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/requious-frakto">Requious Frakto (by BordListian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blood-magic">Blood Magic  (by WayofTime)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/requious-frakto">Requious Frakto (by BordListian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-quests-forge">FTB Quests (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mtlib">MTLib (by Jaredlll08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-interface-terminal">AE2 Wireless Interface Terminal (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/contenttweaker">ContentTweaker (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/konkrete">Konkrete [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-craft">Industrial Craft (by sfPlayer1)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/konkrete">Konkrete [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mod-name-tooltip">Mod Name Tooltip (by mezz)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/vanillafix">VanillaFix (by Runemoro)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/fastworkbench">FastWorkbench (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/top-addons">TOP Addons (by DrManganese)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/vanillafix">VanillaFix (by Runemoro)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-recipe-generator">Avaritia Recipe Generator (by TechDweebPlays)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pickle-tweaks">Pickle Tweaks (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/pickle-tweaks">Pickle Tweaks (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/capability-adapter">ME Capability Adapter (by rfctksSparkle)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/libvulpes">LibVulpes (by zmaster587)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-rocketry">Advanced Rocketry (by zmaster587)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/better-loading-screen">Custom Loading Screen (by AlexIIL)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-utilities-forge">FTB Utilities (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fast-leaf-decay">Fast Leaf Decay (by olafskiii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/aroma1997core">Aroma1997Core (by Aroma1997)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modtweaker">ModTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/baubles">Baubles (by Azanor13)</a></li>
@@ -118,17 +131,20 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/valkyrielib">ValkyrieLib (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/randompatches-forge">RandomPatches (Forge) (by TheRandomLabs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/topography">Topography (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-legacy-forge">FTB Library (Forge) (Legacy) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openmodslib">OpenModsLib (by OpenMods)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/performant">Performant (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-arsenal">Redstone Arsenal (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chameleon">Chameleon (by Texelsaur)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-fluid-terminal">AE2 Wireless Fluid Terminal (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/dark-utilities">Dark Utilities (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2wtlib">AE2 Wireless Terminal Library (by TheRealp455w0rd)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ae-additions-extra-cells-2-fork">AE Additions - ExtraCells2 Fork (by MasterYodAT9G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania-tweaks">Botania Tweaks (by quat1024)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/guide-api">Guide-API (by TehNut)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/sonar-core">Sonar Core (by sonar_sonic)</a></li>
@@ -136,6 +152,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toast-control">Toast Control (by Shadows_of_Fire)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ic2-tweaker">IC2 Tweaker (by tttusk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/psi">Psi (by Vazkii)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-calculation">Just Enough Calculation (by towdium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclops-core">Cyclops Core (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bonsai-trees">Bonsai Trees 2 (by davenonymous)</a></li>
@@ -146,8 +163,8 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei-bees">JEI Bees (by bdew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-tinkering">Thermal Tinkering (by samboy063)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cucumber">Cucumber Library (by BlakeBr0)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/codechicken-lib-1-8">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ceramics">Ceramics (by KnightMiner)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by Forge_User_06804776)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-filters-forge">Item Filters (Forge) (by LatvianModder)</a></li>
