--- a/modlist.html
+++ b/modlist.html
@@ -17,6 +17,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/actually-additions">Actually Additions (by Ellpeck)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-crafting-terminal">Wireless Crafting Terminal (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/exchangers">Exchangers (by Jackyy)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-characters">Just Enough Characters (by towdium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tesla-core-lib">Tesla Core Lib (by face_of_cat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania">Botania (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/randomtweaker">RandomTweaker (by ikexing)</a></li>
@@ -44,6 +45,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-ultimine-forge">FTB Ultimine (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jaopca">JAOPCA (by TheLMiffy1111)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farming-for-blockheads">Farming for Blockheads (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-controller">Modular Controller (by youyihj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/zenutil">Zen Utils (by youyihj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-dynamics">Integrated Dynamics (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forestry">Forestry (by _ForgeUser7678633)</a></li>
@@ -164,6 +166,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei-bees">JEI Bees (by bdew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-tinkering">Thermal Tinkering (by samboy063)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cucumber">Cucumber Library (by BlakeBr0)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/i18nupdatemod">I18nUpdateMod (by TartaricAcid)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/codechicken-lib-1-8">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ceramics">Ceramics (by KnightMiner)</a></li>
