--- a/modlist.html
+++ b/modlist.html
@@ -7,7 +7,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting-omnifactory-edition">Extended Crafting: Omnifactory Edition (by Exa4096)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tree-growing-simulator">Tree Growing Simulator (by tterrag1098)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/project-ex">Project EX (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/projectex-forge">ProjectEX (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inworldcrafting">InWorldCrafting (by IterationFunk)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-cultivation">Thermal Cultivation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-harvestcraft">Just Enough HarvestCraft (JEHC) (by mrapplexz)</a></li>
@@ -24,7 +24,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by FeldiM245)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/fancymenu">FancyMenu [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-flux">Redstone Flux (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-machinery">Modular Machinery (by HellFirePvP)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
@@ -48,6 +47,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modular-controller">Modular Controller (by youyihj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/zenutil">Zen Utils (by youyihj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-dynamics">Integrated Dynamics (by kroeser)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mixinbootstrap">MixinBootstrap (by LX_Gaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forestry">Forestry (by _ForgeUser7678633)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
@@ -91,42 +91,42 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mantle">Mantle (by mDiyo)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/no-nether-portals">No Nether Portals (by Seneschal_Luwin)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/unidict">UniDict (by WanionCane)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/custom-window-title">Custom Window Title (by chylex)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/inventory-tweaks">Inventory Tweaks [1.12 only]  (by JimeoWan)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bnbgamingcore">BnBGamingCore (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botanic-bonsai">Botanic Bonsai (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/compact-machines">Compact Machines (by davenonymous)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/resource-loader">Resource Loader (by Lumien231)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/controlling">Controlling (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-tool-leveling">Tinkers' Tool Leveling (by bonusboni)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/resource-loader">Resource Loader (by Lumien231)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forgiving-void">Forgiving Void (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-tool-leveling">Tinkers' Tool Leveling (by bonusboni)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumic-jei">Thaumic JEI (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bdlib">BdLib (by bdew)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/requious-frakto">Requious Frakto (by BordListian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/blood-magic">Blood Magic  (by WayofTime)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/requious-frakto">Requious Frakto (by BordListian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-quests-forge">FTB Quests (Forge) (by FTB)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mtlib">MTLib (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-interface-terminal">AE2 Wireless Interface Terminal (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/contenttweaker">ContentTweaker (by Jaredlll08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/konkrete">Konkrete [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-craft">Industrial Craft (by sfPlayer1)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/konkrete">Konkrete [Forge] (by Keksuccino)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mod-name-tooltip">Mod Name Tooltip (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fastworkbench">FastWorkbench (by Shadows_of_Fire)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/vanillafix">VanillaFix (by Runemoro)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/top-addons">TOP Addons (by DrManganese)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/vanillafix">VanillaFix (by Runemoro)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-recipe-generator">Avaritia Recipe Generator (by TechDweebPlays)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/pickle-tweaks">Pickle Tweaks (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/appleskin">AppleSkin (by squeek502)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/pickle-tweaks">Pickle Tweaks (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/capability-adapter">ME Capability Adapter (by rfctksSparkle)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/libvulpes">LibVulpes (by zmaster587)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/environmental-tech">Environmental Tech (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-rocketry">Advanced Rocketry (by zmaster587)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-loading-screen">Custom Loading Screen (by AlexIIL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-utilities-forge">FTB Utilities (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fast-leaf-decay">Fast Leaf Decay (by olafskiii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft-research-patcher">Thaumcraft Research Patcher (by TheCodex6824)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/modtweaker">ModTweaker (by Jaredlll08)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft-research-patcher">Thaumcraft Research Patcher (by TheCodex6824)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/baubles">Baubles (by Azanor13)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betterfps">BetterFps (by Guichaguri)</a></li>
@@ -139,13 +139,13 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/topography">Topography (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-library-legacy-forge">FTB Library (Forge) (Legacy) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openmodslib">OpenModsLib (by OpenMods)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/openblocks">OpenBlocks (by OpenMods)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mystical-agriculture">Mystical Agriculture (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/performant">Performant (by someaddon)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-arsenal">Redstone Arsenal (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chameleon">Chameleon (by Texelsaur)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/dark-utilities">Dark Utilities (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wireless-fluid-terminal">AE2 Wireless Fluid Terminal (by TheRealp455w0rd)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/dark-utilities">Dark Utilities (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae2wtlib">AE2 Wireless Terminal Library (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ae-additions-extra-cells-2-fork">AE Additions - ExtraCells2 Fork (by MasterYodAT9G)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania-tweaks">Botania Tweaks (by quat1024)</a></li>
@@ -166,9 +166,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei-bees">JEI Bees (by bdew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-tinkering">Thermal Tinkering (by samboy063)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cucumber">Cucumber Library (by BlakeBr0)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/i18nupdatemod">I18nUpdateMod (by TartaricAcid)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/codechicken-lib-1-8">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-io">Ender IO (by idontwantthisaccount4)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/i18nupdatemod">I18nUpdateMod (by TartaricAcid)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ceramics">Ceramics (by KnightMiner)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extra-utilities">Extra Utilities (by Forge_User_06804776)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-filters-forge">Item Filters (Forge) (by LatvianModder)</a></li>
