--- a/modlist.html
+++ b/modlist.html
@@ -5,7 +5,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-energistics-jee">Just Enough Energistics (JEE) (by TheRealp455w0rd)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-builders-wands">Better Builder's Wands (by Portablejim)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pneumaticcraft-repressurized">PneumaticCraft: Repressurized (by desht_08)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting-omnifactory-edition">Extended Crafting: Omnifactory Edition (by Exa4096)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting-nomifactory-edition">Extended Crafting: Nomifactory Edition (by Exa4096)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tree-growing-simulator">Tree Growing Simulator (by tterrag1098)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/projectex-forge">ProjectEX (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inworldcrafting">InWorldCrafting (by IterationFunk)</a></li>
@@ -21,7 +21,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tesla-core-lib">Tesla Core Lib (by face_of_cat)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania">Botania (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/randomtweaker">RandomTweaker (by ikexing)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by FeldiM245)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/more-overlays">More Overlays (by VoidField101)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism">Mekanism (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-flux">Redstone Flux (by TeamCoFH)</a></li>
@@ -30,6 +30,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cofh-core">CoFH Core (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-expansion">Thermal Expansion (by TeamCoFH)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/gugu-utils">GuGu Utils (by warmthdawn)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bnbgaminglib">BNBGamingLib (by bloodnbonesgaming)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tinkers-skyblock">Tinkers' Skyblock (by bonusboni)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jetif">Just Enough Throwing In Fluids (JETIF) (by Lykrast)</a></li>
@@ -48,7 +49,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/zenutil">Zen Utils (by youyihj)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-dynamics">Integrated Dynamics (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mixinbootstrap">MixinBootstrap (by LX_Gaming)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/forestry">Forestry (by _ForgeUser7678633)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/forestry">Forestry (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flux-networks">Flux Networks (by sonar_sonic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/endercore">EnderCore (by tterrag1098)</a></li>
@@ -63,7 +64,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/surge">Surge (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-backups-forge">FTB Backups (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafttweaker-utils">CraftTweaker Utils (by BrisingrAerowing)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphor-forge">Phosphor (Forge) (by jellysquid3)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/phosphor-forge">Phosphor (Forge) (by jellysquid3_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/draconic-evolution">Draconic Evolution (by brandon3055)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/carry-on">Carry On (by Tschipp)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chisel">Chisel (by tterrag1098)</a></li>
@@ -125,14 +126,15 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-loading-screen">Custom Loading Screen (by AlexIIL)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-utilities-forge">FTB Utilities (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fast-leaf-decay">Fast Leaf Decay (by olafskiii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/modtweaker">ModTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thaumcraft-research-patcher">Thaumcraft Research Patcher (by TheCodex6824)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/modtweaker">ModTweaker (by Jaredlll08)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/baubles">Baubles (by Azanor13)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/betterfps">BetterFps (by Guichaguri)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/libnine">LibNine (by phantamanta44)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/valkyrielib">ValkyrieLib (by ValkyrieofNight)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/patchouli">Patchouli (by Vazkii)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/mixin-booter">MixinBooter (by Rongmario)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-innovation">Thermal Innovation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/randompatches-forge">RandomPatches (Forge) (by TheRandomLabs)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/applied-energistics-2">Applied Energistics 2 (by AlgorithmX2)</a></li>
@@ -158,7 +160,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/just-enough-calculation">Just Enough Calculation (by towdium)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclops-core">Cyclops Core (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/bonsai-trees">Bonsai Trees 2 (by davenonymous)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/bonsai-trees">Bonsai Trees 3 (by davenonymous)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/inspirations">Inspirations (by KnightMiner)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/storage-drawers">Storage Drawers (by Texelsaur)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/clumps">Clumps (by Jaredlll08)</a></li>
